--- a/app/src/main/res/layout/activity_add_location.xml
+++ b/app/src/main/res/layout/activity_add_location.xml
@@ -5,6 +5,6 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddLocation">
+    tools:context=".AddLocationActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
