--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -47,14 +47,14 @@
             app:srcCompat="@drawable/siren" />
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/backImage"
             android:layout_width="40dp"
             android:layout_height="33dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/backBtn" />
+            app:srcCompat="@drawable/backicon" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -62,12 +62,14 @@
         android:id="@+id/constraintLayout3"
         android:layout_width="0dp"
         android:layout_height="649dp"
+        android:layout_marginTop="51dp"
         android:layout_marginBottom="1dp"
         android:background="#F2AA84"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3">
 
         <Button
             android:id="@+id/button"
