--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,14 +37,16 @@
         android:layout_width="0dp"
         android:layout_height="608dp"
         android:layout_marginStart="1dp"
+        android:layout_marginTop="55dp"
         android:layout_marginEnd="1dp"
         android:background="#F2AA84"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4">
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/btnAddLocation"
             android:layout_width="366dp"
             android:layout_height="68dp"
             android:layout_marginStart="16dp"
@@ -54,6 +56,7 @@
             android:text="@string/add_location"
             android:textColor="#000000"
             android:textSize="34sp"
+            android:onClick="GoToAddLocationActivity"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
