--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -90,14 +90,23 @@
             android:id="@+id/button3"
             android:layout_width="145dp"
             android:layout_height="59dp"
-            android:layout_marginEnd="30dp"
+            android:layout_marginEnd="48dp"
             android:layout_marginBottom="20dp"
-            android:backgroundTint="#039408"
-            android:text="@string/add_location"
+            android:backgroundTint="#83CBEB"
             android:textColor="#000000"
             android:textSize="34sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="@+id/button3"
+            app:layout_constraintEnd_toEndOf="@+id/button3"
+            app:layout_constraintStart_toStartOf="@+id/button3"
+            app:layout_constraintTop_toTopOf="@+id/button3"
+            app:srcCompat="@drawable/cal" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
