--- a/app/src/main/res/layout/activity_calling.xml
+++ b/app/src/main/res/layout/activity_calling.xml
@@ -46,7 +46,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView5">
 
         <Button
-            android:id="@+id/btnAddLocation"
+            android:id="@+id/btnEndCall"
             android:layout_width="362dp"
             android:layout_height="121dp"
             android:layout_marginStart="16dp"
@@ -55,6 +55,7 @@
             android:backgroundTint="#FF9797"
             android:textColor="#FF0000"
             android:textSize="34sp"
+            android:onClick="toContact"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -65,20 +66,26 @@
             android:layout_height="73dp"
             android:background="#FFFFFF"
             android:fontFamily="sans-serif-black"
-            android:text="NAME OF PERSON"
+            android:text="Micky"
             android:textAlignment="center"
-            android:textSize="40sp"
-            tools:layout_editor_absoluteX="21dp"
-            tools:layout_editor_absoluteY="37dp" />
+            android:textColor="#0B0B0B"
+            android:textSize="50sp"
+            app:layout_constraintBottom_toTopOf="@+id/btnEndCall"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.488"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.097" />
 
         <ImageView
             android:id="@+id/imageView3"
             android:layout_width="77dp"
             android:layout_height="68dp"
-            app:layout_constraintBottom_toBottomOf="@+id/btnAddLocation"
-            app:layout_constraintEnd_toEndOf="@+id/btnAddLocation"
-            app:layout_constraintStart_toStartOf="@+id/btnAddLocation"
-            app:layout_constraintTop_toTopOf="@+id/btnAddLocation"
+            android:onClick="toContact"
+            app:layout_constraintBottom_toBottomOf="@+id/btnEndCall"
+            app:layout_constraintEnd_toEndOf="@+id/btnEndCall"
+            app:layout_constraintStart_toStartOf="@+id/btnEndCall"
+            app:layout_constraintTop_toTopOf="@+id/btnEndCall"
             app:srcCompat="@drawable/calling" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -91,6 +98,7 @@
         android:fontFamily="sans-serif-black"
         android:text="@string/callingActivityTitle"
         android:textAlignment="center"
+        android:textColor="#050505"
         android:textSize="35sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
