--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,7 +51,7 @@
             android:layout_marginEnd="21dp"
             android:layout_marginBottom="16dp"
             android:backgroundTint="#83CBEB"
-            android:onClick="addLocation"
+            android:onClick="toLocation"
             android:text="@string/add_location"
             android:textColor="#000000"
             android:textSize="34sp"
