--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,7 +61,7 @@
             app:layout_constraintStart_toStartOf="parent" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/clInput"
+            android:id="@+id/inputContainer"
             android:layout_width="346dp"
             android:layout_height="245dp"
             android:background="#F8F8F8"
@@ -100,7 +100,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
             <Button
-                android:id="@+id/button4"
+                android:id="@+id/btnAdd"
                 android:layout_width="171dp"
                 android:layout_height="46dp"
                 android:layout_marginStart="21dp"
@@ -114,13 +114,13 @@
                 android:textStyle="bold"
                 android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/btnCancelLocation"
+                app:layout_constraintEnd_toStartOf="@+id/btnCancel"
                 app:layout_constraintHorizontal_bias="0.157"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/editTextText2" />
 
             <EditText
-                android:id="@+id/editTextText"
+                android:id="@+id/txtMapName"
                 android:layout_width="280dp"
                 android:layout_height="42dp"
                 android:layout_marginStart="5dp"
@@ -140,7 +140,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
             <Button
-                android:id="@+id/btnCancelLocation"
+                android:id="@+id/btnCancel"
                 android:layout_width="wrap_content"
                 android:layout_height="46dp"
                 android:layout_marginEnd="28dp"
@@ -165,24 +165,14 @@
 
 
             <LinearLayout
+                android:id="@+id/listOfLocations"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="0dp"
                 android:orientation="vertical"
                 android:paddingStart="30dp"
                 android:paddingEnd="30dp"
-                app:layout_constraintBottom_toBottomOf="parent">
-
-                <Button
-                    android:id="@+id/button5"
-                    android:layout_width="337dp"
-                    android:layout_height="70dp"
-                    android:backgroundTint="#F8F7F7"
-                    android:onClick="toLocation"
-                    android:text="HOME"
-                    android:textColor="#000000"
-                    android:textSize="24sp" />
-            </LinearLayout>
+                app:layout_constraintBottom_toBottomOf="parent"/>
         </ScrollView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
